--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@nestjs/typeorm": "^10.0.2",
     "aws-lambda": "^1.0.7",
     "aws-serverless-express": "^3.4.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "mysql2": "^3.9.7",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
