feat(aurora): add and test connection to aws endpoint

--- a/serverless.yaml
+++ b/serverless.yaml
@@ -1,14 +1,14 @@
 service: serstock-backend
 
 plugins:
-  - 'serverless-plugin-typescript'  
+  - 'serverless-plugin-typescript'
   - serverless-plugin-optimize
   - serverless-offline
-  # - serverless-plugin-warmup
+  - serverless-plugin-warmup
 
 # custom:
 #   # Enable warmup on all functions (only for production and staging)
-#   warmup:      
+#   warmup:
 #       - production
 #       - staging
 
@@ -16,11 +16,10 @@ provider:
   name: aws
   region: eu-central-1
   runtime: nodejs20.x
-  memorySize: 128 
+  memorySize: 128
   timeout: 5
   tracing:
     lambda: true
- 
 
 package:
   individually: true
@@ -31,4 +30,4 @@ functions:
     events:
       - http:
           method: any
-          path: /{proxy+}
+          path: /{any+}
