--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "typeorm-aurora-data-api-driver": "^2.4.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -65,6 +66,7 @@
     "serverless-offline": "^13.3.4",
     "serverless-plugin-optimize": "^4.2.1-rc.1",
     "serverless-plugin-typescript": "^2.1.5",
+    "serverless-plugin-warmup": "^8.3.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
